--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "date-fns": "^1.30.1",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-player": "^1.11.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
   },
